infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-api
  labels:
    app: springboot-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-api
  template:
    metadata:
      labels:
        app: springboot-api
    spec:
      containers:
      - name: java
        imagePullPolicy: Always
        image: lingarajsahu49/java:springboot-api
        ports:
        - containerPort: 8080
        resources: {}
        livenessProbe:
          httpGet:
            path: /customer-api/healtz
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /customer-api/healtz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
      imagePullSecrets:
      - name: regcred
