infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /customer-api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: springboot-api
                port:
                  number: 8090
